fixed codeanalysis warns